crates/banshee_parser/src/snapshots/banshee_parser__tests__insert_on_conflict_update.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..100
  INSERT_STMT@0..100
    INSERT_KW@0..6 "INSERT"
    WHITESPACE@6..7 " "
    INTO_KW@7..11 "INTO"
    WHITESPACE@11..12 " "
    TABLE_REF@12..18
      IDENT@12..17 "users"
      WHITESPACE@17..18 " "
    INSERT_COLUMNS@18..29
      L_PAREN@18..19 "("
      IDENT@19..21 "id"
      COMMA@21..22 ","
      WHITESPACE@22..23 " "
      IDENT@23..27 "name"
      R_PAREN@27..28 ")"
      WHITESPACE@28..29 " "
    VALUES_CLAUSE@29..49
      VALUES_KW@29..35 "VALUES"
      WHITESPACE@35..36 " "
      VALUES_ROW@36..49
        L_PAREN@36..37 "("
        LITERAL@37..38
          INTEGER@37..38 "1"
        COMMA@38..39 ","
        WHITESPACE@39..40 " "
        LITERAL@40..47
          STRING@40..47 "'Alice'"
        R_PAREN@47..48 ")"
        WHITESPACE@48..49 " "
    ON_CONFLICT_CLAUSE@49..100
      ON_KW@49..51 "ON"
      WHITESPACE@51..52 " "
      CONFLICT_KW@52..60 "CONFLICT"
      WHITESPACE@60..61 " "
      CONFLICT_TARGET@61..66
        L_PAREN@61..62 "("
        COLUMN_REF@62..64
          IDENT@62..64 "id"
        R_PAREN@64..65 ")"
        WHITESPACE@65..66 " "
      DO_KW@66..68 "DO"
      WHITESPACE@68..69 " "
      UPDATE_KW@69..75 "UPDATE"
      WHITESPACE@75..76 " "
      DO_UPDATE@76..100
        SET_KW@76..79 "SET"
        WHITESPACE@79..80 " "
        SET_ITEM@80..100
          IDENT@80..84 "name"
          WHITESPACE@84..85 " "
          EQ@85..86 "="
          WHITESPACE@86..87 " "
          COLUMN_REF@87..100
            IDENT@87..95 "EXCLUDED"
            DOT@95..96 "."
            IDENT@96..100 "name"
