crates/banshee_parser/src/snapshots/banshee_parser__tests__join_lateral.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..99
  SELECT_STMT@0..99
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..99
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      JOIN_EXPR@14..99
        TABLE_REF@14..22
          IDENT@14..19 "users"
          WHITESPACE@19..20 " "
          IDENT@20..21 "u"
          WHITESPACE@21..22 " "
        LEFT_KW@22..26 "LEFT"
        WHITESPACE@26..27 " "
        JOIN_KW@27..31 "JOIN"
        WHITESPACE@31..32 " "
        TABLE_REF@32..92
          LATERAL_KW@32..39 "LATERAL"
          WHITESPACE@39..40 " "
          L_PAREN@40..41 "("
          SELECT_STMT@41..86
            SELECT_KW@41..47 "SELECT"
            WHITESPACE@47..48 " "
            SELECT_ITEM_LIST@48..50
              SELECT_ITEM@48..50
                STAR_EXPR@48..50
                  STAR@48..49 "*"
                  WHITESPACE@49..50 " "
            FROM_CLAUSE@50..64
              FROM_KW@50..54 "FROM"
              WHITESPACE@54..55 " "
              TABLE_REF@55..64
                IDENT@55..61 "orders"
                WHITESPACE@61..62 " "
                IDENT@62..63 "o"
                WHITESPACE@63..64 " "
            WHERE_CLAUSE@64..86
              WHERE_KW@64..69 "WHERE"
              WHITESPACE@69..70 " "
              BINARY_EXPR@70..86
                COLUMN_REF@70..80
                  IDENT@70..71 "o"
                  DOT@71..72 "."
                  IDENT@72..79 "user_id"
                  WHITESPACE@79..80 " "
                EQ@80..81 "="
                WHITESPACE@81..82 " "
                COLUMN_REF@82..86
                  IDENT@82..83 "u"
                  DOT@83..84 "."
                  IDENT@84..86 "id"
          R_PAREN@86..87 ")"
          WHITESPACE@87..88 " "
          IDENT@88..91 "ord"
          WHITESPACE@91..92 " "
        ON_KW@92..94 "ON"
        WHITESPACE@94..95 " "
        JOIN_CONDITION@95..99
          LITERAL@95..99
            TRUE_KW@95..99 "true"
