crates/banshee_parser/src/snapshots/banshee_parser__tests__jsonb_access_array_index.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..57
  SELECT_STMT@0..57
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..45
      SELECT_ITEM@7..45
        BINARY_EXPR@7..45
          COLUMN_REF@7..23
            IDENT@7..14 "patient"
            DOT@14..15 "."
            IDENT@15..23 "resource"
          ARROW@23..25 "->"
          BINARY_EXPR@25..45
            LITERAL@25..31
              STRING@25..31 "'name'"
            ARROW@31..33 "->"
            BINARY_EXPR@33..45
              LITERAL@33..34
                INTEGER@33..34 "0"
              ARROW@34..36 "->"
              LITERAL@36..45
                STRING@36..44 "'family'"
                WHITESPACE@44..45 " "
    FROM_CLAUSE@45..57
      FROM_KW@45..49 "FROM"
      WHITESPACE@49..50 " "
      TABLE_REF@50..57
        IDENT@50..57 "patient"
